[package]
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
name = "all-pats"
version = "0.1.0"

[[bin]]
name = "test-ac"
path = "bins/test-ac.rs"

[[bin]]
name = "test-bc"
path = "bins/test-bc.rs"

[[bin]]
name = "pq"
path = "bins/pq.rs"

[[bin]]
name = "pqk"
path = "bins/pqk.rs"

[[bin]]
name = "recover-from-vol-disambig"
path = "bins/recover-from-vol-disambig.rs"

[[bin]]
name = "pq-upto-n"
path = "bins/pq-upto-n.rs"

[[bin]]
name = "all-pats"
path = "src/main.rs"

[dependencies]
num-rational = "0.2.1"
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"
